# mandlerot

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  config.toml  keymap.toml
.claude/agent-memory/: code-reviewer.mem
.docs/: EFFECTS-CATALOG.md  NUMPAD-MANUAL.md  RESUME-video-input.md  ROADMAP-SPECS.md  ROADMAP.md
.liste/: .state.yaml  FEAT-001.md  IDEA-001.md  IDEA-002.md  IDEA-003.md  IDEA-004.md  TASK-001.md  config.yaml
deploy/: boot-config-additions.txt  install.sh  journald-mandlerot.conf  logrotate.mandlerot  mandlerot.service
docs/superpowers/specs/: 2026-05-22-glsl3-hq-variants-design.md
postfx/: bloom.glsl  bloom.toml  bloom_hq.glsl  bloom_hq.toml  chromatic.glsl  chromatic.toml  crt.glsl  crt.toml  dither.glsl  dither.toml  grain.glsl  grain.toml  lut.glsl  lut.toml  pixelate.glsl  pixelate.toml  trails.glsl  trails.toml  vignette.glsl  vignette.toml
scenes/: anime_eyes.glsl  anime_eyes.toml  apollonian.glsl  apollonian.hq.glsl  apollonian.toml  ascii_rain.glsl  ascii_rain.toml  bayer.glsl  bayer.toml  bios_post.glsl  bios_post.toml  boids.glsl  boids.toml  caustics.glsl  caustics.toml  conway.glsl  conway.toml  crt_collapse.glsl  crt_collapse.toml  cube_wireframe.glsl  cube_wireframe.toml  curl_noise.glsl  curl_noise.toml  datamosh.glsl  datamosh.toml  donut.glsl  donut.toml  echo.glsl  echo.toml  fire.glsl  fire.toml  glitch.glsl  glitch.toml  halftone.glsl  halftone.toml  hex_grid.glsl  hex_grid.toml  hex_rain.glsl  hex_rain.toml  juliabulb.glsl  (+95 more)
shaders/: blend.glsl  overlay.glsl  postfx_prelude.glsl  prelude.glsl  prelude_300es.glsl  quad.vert  safe_scene.glsl
src/: action.rs  apply.rs  config.rs  error.rs  headless.rs  hot_reload.rs  lib.rs  main.rs  overlay.rs  platform.rs  state.rs  supervisor.rs  tap_tempo.rs  watchdog.rs
src/audio/: bands.rs  beat.rs  capture.rs  envelope.rs  history.rs  mod.rs  params.rs  thread.rs
src/input/: chord.rs  evdev_src.rs  keymap.rs  mock.rs  mod.rs  winit_src.rs
src/preset/: mod.rs  names.rs  slot_bindings.rs  store.rs
src/render/: chromakey.rs  desktop.rs  fbo.rs  lut.rs  mod.rs  pi.rs  pipeline.rs  postfx.rs  quad.rs  shader.rs  target.rs
src/scene/: library.rs  meta.rs  mod.rs  params.rs
src/status/: compose.rs  desktop.rs  glyphs.rs  grid.rs  mod.rs  pi.rs  render.rs  snapshot.rs  sysmon.rs  theme.rs  thread.rs
src/ui/: mod.rs  screen_harness.rs
src/ui/screens/: audio.rs  audio_device.rs  chromakey.rs  looks.rs  mod.rs  postfx.rs  scene_list.rs  settings.rs  slots.rs
src/video/: capture.rs  frame.rs  mod.rs
tests/: integration_pipeline.rs  integration_replay.rs  integration_status.rs
tests/fixtures/: bad_meta.toml  good_scene.glsl  good_scene.toml  preset_v1.json  preset_v2_with_postfx.json  replay_quickset.txt  soak_set.txt
