[package]
name = "mandlerot"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Generative video VJ tool for Raspberry Pi composite output"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glow = "0.14"
notify = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = "1"
rustfft = "6"
cpal = "0.15"
embedded-graphics = "0.8"

# desktop backend (default)
winit = { version = "0.30", optional = true }
glutin = { version = "0.32", optional = true }
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = { version = "0.6", optional = true }

# pi backend
khronos-egl = { version = "6", features = ["dynamic"], optional = true }
gbm = { version = "0.15", default-features = false, features = ["drm-support"], optional = true }
drm = { version = "0.12", optional = true }
evdev = { version = "0.13", optional = true }
rppal = { version = "0.19", features = ["embedded-hal"], optional = true }
mipidsi = { version = "0.8", optional = true }
display-interface-spi = { version = "0.5", optional = true }
embedded-hal = { version = "1", optional = true }
softbuffer = { version = "0.4", optional = true }

# cpal 0.15 on macOS pulls in coreaudio-sys; 0.2.17 bumped to edition2024
# which requires Rust 1.85+. Pin to <0.2.17 to stay compatible with our
# 1.83 toolchain.
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = { version = ">=0.2.0, <0.2.17", default-features = false }

[features]
default = ["desktop"]
desktop = ["dep:winit", "dep:glutin", "dep:glutin-winit", "dep:raw-window-handle", "dep:softbuffer"]
pi = ["dep:khronos-egl", "dep:gbm", "dep:drm", "dep:evdev", "dep:rppal", "dep:mipidsi", "dep:display-interface-spi", "dep:embedded-hal"]

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[[bin]]
name = "mandlerot"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
